# yap-examples

./: .gitignore  LICENSE  README.md  yap-examples.cabal
Data/YAP/: Classes.hs  CliffordAlgebra.hs  DifferentialOperator.hs  DirichletSeries.hs  DyadicRational.hs  FiniteMap.hs  FiniteSet.hs  Logarithm.hs  Matrix.hs  PAdic.hs  Peano.hs  Polynomial.hs  PowerSeries.hs  Quantity.hs  Quaternion.hs  Quotient.hs  Tropical.hs  UnitInterval.hs  Vector.hs  WeylAlgebra.hs
Data/YAP/FiniteField/: GF256.hs
Data/YAP/Matrix/: Square.hs
Data/YAP/Polynomial/: Z2.hs
Data/YAP/PowerSeries/: General.hs  Maclaurin.hs
Data/YAP/Quadratic/: Dirichlet.hs  Eisenstein.hs
Data/YAP/Utilities/: LinearEquations.hs  List.hs
test/: CliffordInverseProof.hs  DirichletIntegerTests.hs  DyadicRationalTests.hs  EuclideanTests.hs  PowerSeriesTests.hs  WeylAlgebraTests.hs
