Name:           yap-examples
Version:        0.1
Build-Type:     Simple
Cabal-Version:  1.18
License:        BSD3
License-File:   LICENSE
Author:         Ross Paterson <R.Paterson@city.ac.uk>
Maintainer:     Ross Paterson <R.Paterson@city.ac.uk>
Category:       Algebra, Prelude
Synopsis:       examples of the algebraic classes in the yap package
Description:    Example instances of the algebraic classes in the @yap@ package.
Extra-Doc-Files:
                images/Eisenstein_integer_grid.svg

Library
    Default-Language: Haskell2010
    Build-Depends:
                base >= 4.18 && < 5, containers > 0.5 && < 1, yap == 0.3.*
    Exposed-Modules:
                Data.YAP.CliffordAlgebra
                Data.YAP.DifferentialOperator
                Data.YAP.DirichletSeries
                Data.YAP.DyadicRational
                Data.YAP.FiniteField.GF256
                Data.YAP.FiniteMap
                Data.YAP.FiniteSet
                Data.YAP.Logarithm
                Data.YAP.Matrix
                Data.YAP.Matrix.Square
                Data.YAP.PAdic
                Data.YAP.Peano
                Data.YAP.Polynomial
                Data.YAP.Polynomial.Z2
                Data.YAP.PowerSeries
                Data.YAP.PowerSeries.General
                Data.YAP.PowerSeries.Maclaurin
                Data.YAP.Quadratic.Dirichlet
                Data.YAP.Quadratic.Eisenstein
                Data.YAP.Quaternion
                Data.YAP.Quantity
                Data.YAP.Quotient
                Data.YAP.Tropical
                Data.YAP.Vector
                Data.YAP.WeylAlgebra
    Other-Modules:
                Data.YAP.Utilities.LinearEquations
                Data.YAP.Utilities.List

Source-Repository head
    Type: git
    Location: https://github.com/RossPaterson/yap-examples

Test-Suite test-clifford-inverse
    Type: detailed-0.9
    Default-Language: Haskell2010
    Hs-Source-Dirs: test
    Test-Module: CliffordInverseProof
    Build-Depends: base >= 4.18 && < 5, Cabal >= 1.9.2, yap == 0.3.*, yap-examples

Test-Suite test-power-series
    Type: detailed-0.9
    Default-Language: Haskell2010
    Hs-Source-Dirs: test
    Test-Module: PowerSeriesTests
    Build-Depends: base >= 4.18 && < 5, Cabal >= 1.9.2, yap == 0.3.*, yap-examples

Test-Suite test-weyl-algebra
    Type: detailed-0.9
    Default-Language: Haskell2010
    Hs-Source-Dirs: test
    Test-Module: WeylAlgebraTests
    Build-Depends: base >= 4.18 && < 5, Cabal >= 1.9.2, yap == 0.3.*, yap-examples

test-suite euclidean-test
    Type: exitcode-stdio-1.0
    Default-Language: Haskell2010
    Hs-Source-Dirs: test
    Main-Is: EuclideanTests.hs
    Build-Depends:
        base >= 4.18 && < 5, yap == 0.3.*, yap-examples,
        QuickCheck >= 2.0, test-framework, test-framework-quickcheck2
